CarTracker/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_91\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Sanketh Kolli\Documents\Homework\CS 1501\CarTracker
-d
C:\Users\Sanketh Kolli\Documents\Homework\CS 1501\CarTracker\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Sanketh Kolli\Documents\Homework\CS 1501\CarTracker\IndexMinPriorityQueue.java
<---- end of javadoc command ---->
Loading source file C:\Users\Sanketh Kolli\Documents\Homework\CS 1501\CarTracker\IndexMinPriorityQueue.java...
C:\Users\Sanketh Kolli\Documents\Homework\CS 1501\CarTracker\IndexMinPriorityQueue.java:5: error: ';' expected
    private Car[] qp[]
                      ^
1 error
